less/sidebar-core.less
//
// Sidebar Core
// --------------------------------------------------

.sidebar {
    position: fixed !important;
    top: 0;
    overflow: hidden;
    bottom: 0;
    z-index: @zindex-sidebar;
    width: @sidebar-width;
    cursor: default;
    -moz-user-select: -moz-none;
    user-select: none;
    border-left: none;
    border-right: 1px solid transparent;

    -webkit-transform: translate3d(-@sidebar-width, 0px, 0px);
    transform: translate3d(-@sidebar-width, 0px, 0px);

    &.sidebar-ready {
        -webkit-transition: -webkit-transform 0.2s;
        transition: transform 0.2s;
    }

    &.sidebar-open {
        -webkit-transform: translate3d(0px, 0px, 0px);
        transform: translate3d(0px, 0px, 0px);
    }

    .sidebar-menu {
        margin: 0;
        padding: 0;
        overflow-x: hidden;
        overflow-y: hidden;
        height: 100%;
        list-style: none;
        text-align: left;
        font-size: @sidebar-default-font-size;

        ul {
            padding: 0;
            margin: 0;
        }

        li {
            display: block;
        }
    }

    &.sidebar-ready {
        .sidebar-menu {
            overflow-y: auto;
        }
    }

    .sidebar-group > span,
    .sidebar-item > a {
        display: block;
        height: 100%;
        padding: 12px 15px;
        text-decoration: none;
        position: relative;
    }

    .sidebar-item > a.active {
        border-left: 5px solid;
        padding: 12px 15px 12px 10px;
    }

    .sidebar-item.sidebar-item-mini {
        font-size: 0.85em;

        > a {
            padding-top: 12px;
            padding-bottom: 12px;
        }
    }

    .sidebar-group {
        margin-bottom: 20px;

        &:last-child {
            margin-bottom: 0;
        }

        > span {
            font-family: @headings-font-family;
            font-size: @sidebar-default-group-size;
            border-bottom: 1px solid transparent;
        }

        &.sticky-header {
            position: absolute;
            height: auto;
            top: 0;
            left: 0;
            right: 0;
            z-index: 1;
            margin-top: 0;
        }

        + .sidebar-item {
            margin-top: 32px;
            border-top: 1px solid transparent;
        }
    }

    .sidebar-item > a {
        cursor: pointer;
    }
}

.sidebar-swipe {
    position : fixed;
    z-index: @zindex-sidebar - 2;
    width: 20px;
    left: 0;
    top: 0;
    bottom: 0;

    -moz-user-select: -moz-none;
    user-select: none;
}

.sidebar-open + .sidebar-swipe,
.sidebar-force-open + .sidebar-swipe {
    left: @sidebar-width;
}

.sidebar {
    &.sidebar-default {
        color: @sidebar-default-color;
        background-color: @sidebar-default-bg;

        &.sidebar-open,
        &.sidebar-dragging {
            .box-shadow(3px 0 4px rgba(0, 0, 0, 0.18));
        }

        .sidebar-group {
            > span {
                color: @sidebar-default-group-color;
                border-bottom-color: @sidebar-default-border-color;
            }

            &.sticky-header > span {
                background-color: @sidebar-default-bg;
            }

            + .sidebar-item {
                border-top-color: @sidebar-default-border-color;
            }
        }

        .sidebar-item {
            > a {
                color: @sidebar-default-link-color;
                background-color: @sidebar-default-link-bg;

                &:hover,
                &:focus {
                    color: @sidebar-default-link-hover-color;
                    background-color: @sidebar-default-link-hover-bg;
                }

                &.active {
                    color: @sidebar-default-link-active-color;
                    background-color: @sidebar-default-link-active-bg;
                }
            }

            &.sidebar-item-mini > a {
                color: @sidebar-default-link-mini-color;
            }
        }

        .hammer-scrollbar {
            background-color: @sidebar-default-scrollbar-bg;
        }
    }

    &.sidebar-inverse {
        color: @sidebar-inverse-color;
        background-color: @sidebar-inverse-bg;

        &.sidebar-open,
        &.sidebar-dragging {
            .box-shadow(3px 0 4px rgba(0, 0, 0, 0.32));
        }

        .sidebar-group {
            > span {
                color: @sidebar-inverse-group-color;
                border-bottom-color: @sidebar-inverse-border-color;
            }

            &.sticky-header > span {
                background-color: @sidebar-inverse-bg;
            }

            + .sidebar-item {
                border-top-color: @sidebar-inverse-border-color;
            }
        }

        .sidebar-item {
            > a {
                color: @sidebar-inverse-link-color;
                background-color: @sidebar-inverse-link-bg;

                &:hover,
                &:focus {
                    color: @sidebar-inverse-link-hover-color;
                    background-color: @sidebar-inverse-link-hover-bg;
                }

                &.active {
                    color: @sidebar-inverse-link-active-color;
                    background-color: @sidebar-inverse-link-active-bg;
                }
            }

            &.sidebar-item-mini > a {
                color: @sidebar-inverse-link-mini-color;
            }
        }

        .hammer-scrollbar {
            background-color: @sidebar-inverse-scrollbar-bg;
        }
    }
}

// Sidebar Right
// -------------------------

.sidebar-right {
    &.sidebar {
        right: 0;
        border-right: none;
        border-left: 1px solid transparent;
        -webkit-transform: translate3d(@sidebar-width, 0px, 0px);
        transform: translate3d(@sidebar-width, 0px, 0px);

        &.sidebar-open {
            -webkit-transform: translate3d(0px, 0px, 0px);
            transform: translate3d(0px, 0px, 0px);
        }

        &.sidebar-default {
            &.sidebar-open,
            &.sidebar-dragging {
                .box-shadow(-3px 0 4px rgba(0, 0, 0, 0.18));
            }
        }

        &.sidebar-inverse {
            &.sidebar-open,
            &.sidebar-dragging {
                .box-shadow(-3px 0 4px rgba(0, 0, 0, 0.32));
            }
        }

        .sidebar-item > a.active {
            border-left: inherit;
            border-right: 5px solid;
            padding: 12px 10px 12px 15px;
        }
    }

    + .sidebar-swipe {
        left: auto;
        right: 0;
    }

    &.sidebar-open + .sidebar-swipe,
    &.sidebar-force-open + .sidebar-swipe {
        right: @sidebar-width;
    }
}

// Responsive
// -------------------------

@media (max-width: @screen-xs-max) {
    .sidebar {
        width: 80%;
        -webkit-transform: translate3d(-100%, 0px, 0px);
        transform: translate3d(-100%, 0px, 0px);
    }

    .sidebar-open + .sidebar-swipe,
    .sidebar-force-open.sidebar-open + .sidebar-swipe {
        left: 80%;
    }

    .sidebar-force-open {
        + .sidebar-swipe {
            left: 0;
        }
    }

    .sidebar-right {
        &.sidebar {
            -webkit-transform: translate3d(100%, 0px, 0px);
            transform: translate3d(100%, 0px, 0px);
        }

        &.sidebar-open + .sidebar-swipe {
            left: auto;
            right: 80%;
        }

        &.sidebar-force-open {
            + .sidebar-swipe {
                left: auto;
                right: 0;
            }
        }
    }
}

@media (max-width: @screen-sm-max) {
    .sidebar-force-open {
        &.sidebar:not(.sidebar-open) + .sidebar-swipe {
            left: 0;
        }
    }
}

@media (min-width: (@screen-sm-max + 1)) {
    .sidebar.sidebar-locked {
        &.sidebar-default {
            border-color: @sidebar-default-border-color;
        }

        &.sidebar-inverse {
            border-color: @sidebar-inverse-border-color;
        }
    }

    .sidebar.sidebar-open-init {
        -webkit-transform: translate3d(0px, 0px, 0px);
        transform: translate3d(0px, 0px, 0px);
    }

    .sidebar-force-open {
        &.sidebar.sidebar-default {
            &.sidebar-open,
            &.sidebar-dragging {
                .box-shadow(@sidebar-default-shadow-open-left);
            }
        }

        &.sidebar.sidebar-inverse {
            &.sidebar-open,
            &.sidebar-dragging {
                .box-shadow(@sidebar-inverse-shadow-open-left);
            }
        }
    }

    .sidebar-force-open.sidebar-right {
        &.sidebar.sidebar-default {
            &.sidebar-open,
            &.sidebar-dragging {
                .box-shadow(@sidebar-default-shadow-open-right);
            }
        }

        &.sidebar.sidebar-inverse {
            &.sidebar-open,
            &.sidebar-dragging {
                .box-shadow(@sidebar-inverse-shadow-open-right);
            }
        }
    }
}

